# api/src/data/types.ts
@@ -1,0 +1,13 @@
+export type IngredientData = {
+  name: string;
+  quantity: number;
+  measurement?: string;
+};
+
+export type RecipeData = {
+  id: string;
+  name: string;
+  imageUrl: string;
+  cookingTime: string;
+  ingredients: IngredientData[];
+};
