# api/src/domain/entities/Recipe/entity.ts
@@ -1,0 +1,9 @@
+import { Ingredient } from "../Ingredient/entity";
+
+export type Recipe = {
+  id: string;
+  name: string;
+  image: string;
+  ingredients: Ingredient[];
+  cookingTime: string;
+};
